# myauth

./: .gitignore  app.py  docker-compose.yaml  dockerfile  pyproject.toml
config/: auth.config
templates/: error.html  login.html
