[project]
name = "myauthapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask-session>=0.8.0",
    "flask>=3.1.0",
    "google-api-python-client>=2.156.0",
    "jsonify>=0.5",
    "requests>=2.32.3",
    "waitress>=3.0.2",
    "sqlalchemy>=2.0.36",
    "flask-sqlalchemy>=3.1.1",
    "logger>=1.4",
]
